# Konecta-Internship

Hr attrition and training prediction models/: Dockerfile  app.py  attrition_feature_names.joblib  combined.csv  logistic_model_training.joblib  pyproject.toml  readme.md  requirements.txt  scaler_attrition.joblib  training_feature_names.joblib  xgboost_model_attrition.joblib
Task1/: Task1.ipynb
Task2/: Task2.ipynb
Task3/: AI & ML-Roba Hesham Farouk_Task 3.ipynb  Task3-updated.ipynb
Task4/: AI & ML-Roba Hesham-Task4.ipynb
Task6/: A.json  B.json  C.json  D.json  E.json  Task6 (2).ipynb
